# homelab-gitops-k3s

./: .actrc  .ansible-lint  .copier-answers.yaml  .editorconfig  .gitattributes  .gitignore  .justfile  .markdown-link-check.json  .markdownlint.yaml  .mdformat.toml  .mega-linter.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.yaml  .renovaterc.json5  .ruff.toml  .rumdl.toml  .shellcheckrc  .sops.yaml  .sops.yaml.tmpl  .sourceignore  .typos.toml  .yamllint.yaml  404.html  AGENTS.md  LICENSE  README.md  Taskfile.yaml  Taskfile.yml  ansible.cfg  biome.jsonc  bitwarden-eso-migration-map.example.json  flake.nix  great-docs.yml  index.html  mkdocs.yaml  onepassword-eso-migration-map.example.json  pyproject.toml  requirements.txt  (+2 more)
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yaml  labels.yaml  release.yaml  renovate-bot.json5  renovate.json5
.precommit/: to_yaml.sh  yml_to_yaml.sh
.renovate/: AGENT.md  autoMerge.json5  customManagers.json5  grafanaDashboards.json5  labels.json5  packageRules.json5
.taskfiles/: AnsibleTasks.yaml  BootstrapTasks.yaml  BrewTasks.yaml  ClusterTasks.yaml  DBTasks.yaml  FormatTasks.yaml  KubernetesTasks.yaml  LintTasks.yaml  RestoreTasks.yaml  RookTasks.yaml  SnapshotTasks.yaml  VolsyncTasks.yaml  flux.yml  format.yaml  format.yml  lint.yml
1-prerequisites/: index.html
2-install_k3s_with_ansible/: index.html
3-gitops_with_flux/: index.html
4-new_app/: index.html
Node Prep/: index.html
ansible/: README.md  ansible.cfg  index.html  (+3 more)
(+2939 files in other folders)
