[project]
name = "homelab-gitops-k3s"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "ruamel-yaml>=0.19.1",
]

# [dependency-groups]
# dev = [
#     "maturin>=1.11.5",
# ]


# --- pytest -----------------------------------------------------------------
# ref: https://docs.pytest.org/en/7.3.x/reference/customize.html
[tool.pytest.ini_options]
addopts = '''
    -ra
    --strict-markers
    --ignore=docs/conf.py
    --ignore=setup.py
    --ignore=ci
    --ignore=.eggs
    --import-mode=importlib
    --tb=short
'''
# --doctest-modules
# --doctest-glob=\*.rst
norecursedirs = [
  ".env",
  ".git",
  ".nox",
  ".pytest_cache",
  ".tox",
  "__pycache__",
  "dist",
  "docs",
  "build",
  "migrations",
  "notebooks",
  "writeup",
]
python_files = ["test_*.py", "*_test.py", "tests.py"]
pythonpath = "src"
testpaths = ["tests"]
# log_cli = true

# --- coverage ---------------------------------------------------------------
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
